[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Planta/Game_base.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Planta/Game_Nivel.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Planta/Planta_nivel.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Planta/Controlador_Manual.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Planta/Controlador_PID.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/SFX/Theme_Nivel.ogg" type="AudioStream" id=6]

[node name="Game_Nivel" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="lbPlayer" parent="UI" index="2"]
custom_colors/font_color = Color( 0, 0.345098, 1, 1 )

[node name="ErrorCPU" parent="UI" index="3"]
custom_colors/font_color = Color( 0.501961, 0, 1, 1 )

[node name="lbCPU" parent="UI" index="4"]
custom_colors/font_color = Color( 0.501961, 0, 1, 1 )

[node name="Planta_nivel_Player" parent="Plantas" index="0" instance=ExtResource( 3 )]

[node name="Planta_nivel_CPU" parent="Plantas" index="1" instance=ExtResource( 3 )]

[node name="Controlador_Manual" parent="Controladores" index="0" instance=ExtResource( 4 )]

[node name="Controlador_PID" parent="Controladores" index="1" instance=ExtResource( 5 )]

[node name="Charts" parent="Chart" index="0"]
margin_bottom = 326.414

[node name="sndTheme" parent="SFX" index="1"]
stream = ExtResource( 6 )
[connection signal="PV_changed" from="Plantas/Planta_nivel_Player" to="." method="_on_Planta_nivel_Player_PV_changed"]
[connection signal="Liga_changed" from="ControlBoard" to="." method="_on_ControlBoard_Liga_changed"]
